# Bloomerp

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  bloomerp-components.skill  requirements.txt  scripts.sh  todo
bloomerp/django_bloomerp/: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  pytest.ini  test_auto_discovery.py  test_auto_import.py
bloomerp/django_bloomerp/bloomerp/: apps.py  auth.py  cli.py  config.py  consumers.py  context_processors.py  field_types.py  langchain_tools.py  middleware.py  router.py  routing.py  tasks.py  urls.py
bloomerp/django_bloomerp/bloomerp/automation/: base_executor.py  defintion.py  schema.py  schema_resolver.py  utils.py  values.py
bloomerp/django_bloomerp/bloomerp/celery/: utils.py
bloomerp/django_bloomerp/bloomerp/cli/: main.py
bloomerp/django_bloomerp/bloomerp/components/: bookmark.py  bulk_upload_table.py  comments.py  create_workspace_item.py  data_table.py  datatable.py  datatable_and_filter.py  detail_layout_available_fields.py  detail_layout_preference.py  detail_layout_render_field.py  detail_tabs_folder_modal.py  detail_tabs_preference.py  detail_view_links.py  download_bulk_upload_template.py  execute_sql_query.py  files.py  fk_search_results.py  global_search.py  list_view_filter.py  list_view_filter_inputs.py  search_results.py  select _preference.py  sign_file.py  test_cotton_component.py  todos.py
bloomerp/django_bloomerp/bloomerp/config/: __init__.py  definition.py  readme.md  settings.py  validator.py
bloomerp/django_bloomerp/bloomerp/constants/: permissions.py  test_models.py  widgets.py
bloomerp/django_bloomerp/bloomerp/datatypes/: widgets.py
bloomerp/django_bloomerp/bloomerp/dataviews/: __init__.py  base.py  calendar.py  card.py  gant.py  kanban.py  pivot_table.py  table.py
bloomerp/django_bloomerp/bloomerp/field_types/: __init__.py  dataview_value_functions.py  display_options.py  lookups.py  options.py  types.py
bloomerp/django_bloomerp/bloomerp/form_fields/: address_field.py  icon_field.py  ordered_multiple_choice_field.py  phone_number_field.py  week_field.py
bloomerp/django_bloomerp/bloomerp/forms/: auth.py  base_content_type_form.py  base_workflow_node_form.py  bulk_upload_form.py  core.py  document_templates.py  layouts.py  model_form.py  sidebar.py  widgets.py  workspaces.py
bloomerp/django_bloomerp/bloomerp/migrations/: 0001_initial.py  0002_rowpolicyrulepermission_and_more.py  0002_workspace_single_module_context.py  0003_alter_aiconversation_created_by_and_more.py  0003_alter_applicationfield_options.py  0004_alter_applicationfield_field_type.py  0004_usercreateviewpreference_name_and_more.py  0005_alter_userlistviewpreference_unique_together_and_more.py  0005_alter_userlistviewpreference_view_type_workflow_and_more.py  0006_alter_workflownode_pos_x_alter_workflownode_pos_y.py  0006_remove_documenttemplate_free_variables_and_more.py  0007_activitylog.py  0007_documenttemplate_content_types.py  0008_alter_applicationfield_field_type_and_more.py  0008_userdetailviewpreference_tab_state.py  0009_alter_documenttemplate_styling_and_more.py  0009_remove_tileonworkspace_widget_alter_activitylog_user_and_more.py  0010_alter_applicationfield_field_type.py  0010_workspace_layout.py  0011_remove_tile_query_alter_workspace_module_id_and_more.py  0011_rename_user_activitylog_actor_and_more.py  0012_activitylog_action.py  0012_usercreateviewpreference.py  0013_group_row_policy_rule_conditions.py  0013_remove_filefolder_content_types_and_more.py  0014_alter_applicationfield_field_type.py  0014_filefolder_protected.py  0015_rename_preference_field_layout_to_layout.py  0015_sidebar_sidebaritem.py  0016_form.py  0016_sidebaritem_color_alter_sidebar_user.py  0017_alter_sidebaritem_url.py  0017_alter_workspace_layout.py  0018_form_description_form_initial_payload_and_more.py  0018_tile_type_alter_sidebaritem_color.py  0019_formsubmission.py  0019_tile_auto_generated.py  0020_form_closes_at_form_max_submissions_per_ip_and_more.py  0020_tile_icon.py  0021_add_files_relation_field_type.py  (+42 more)
bloomerp/django_bloomerp/bloomerp/model_fields/: address_field.py  code_field.py  file_field.py  icon_field.py  phone_number_field.py  status_field.py  text_editor_field.py  user_field.py  week_field.py
bloomerp/django_bloomerp/bloomerp/models/: __init__.py  activity_log.py  api_key.py  application_field.py  auth.py  base_bloomerp_model.py  definition.py  document_templates.py  fields.py  file.py  form.py  mixins.py  user_list_view_preference.py  workspaces.py
bloomerp/django_bloomerp/bloomerp/modules/: automation.py  core.py  data.py  definition.py  misc.py  users.py  website.py
bloomerp/django_bloomerp/bloomerp/sdk/: base.py  javascript.py  python.py  typescript.py
bloomerp/django_bloomerp/bloomerp/serializers/: access_control.py  model_serializers.py  workflow.py
bloomerp/django_bloomerp/bloomerp/services/: activity_log_services.py  bulk_action_services.py  bulk_services.py  create_view_services.py  detail_view_services.py  document_services.py  export_services.py  file_services.py  form_services.py  notification_services.py  object_file_field_services.py  object_services.py  one_to_many_field_services.py  permission_services.py  sectioned_layout_services.py  sql_services.py  user_services.py  workflow_services.py  workspace_services.py
bloomerp/django_bloomerp/bloomerp/signals/: __init__.py  activity_log.py  automations.py
bloomerp/django_bloomerp/bloomerp/static_src/: EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  MIGRATION.md  QUICKSTART.md  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
bloomerp/django_bloomerp/bloomerp/tasks/: __init__.py  base.py  bulk_upload_task.py
bloomerp/django_bloomerp/bloomerp_modules/: apps.py  models.py
bloomerp/django_bloomerp/bloomerp_tests/: models.py
bloomerp/django_bloomerp/config/: asgi.py  settings.py  urls.py
bloomerp/django_bloomerp/registries/: README.md  __init__.py  module_registry.py  route_registry.py
bloomerp/django_bloomerp/shared_datatypes/: modules.py
(+1117 files in other folders)
